# HA-ChatGPT-Usage

./: .env.example  .gitignore  API.md  CHANGELOG.md  DEPLOYMENT.md  PROJECT_LOG.md  README.md  SECURITY.md  TODO.md  hacs.json  package-lock.json  package.json  pyproject.toml
custom_components/chatgpt_usage/: __init__.py  api.py  binary_sensor.py  codex.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  parsers.py  sensor.py  strings.json
custom_components/chatgpt_usage/translations/: en.json  fr.json
scripts/: codex-page-parser.mjs  codex-page-parser.test.mjs  codex-web-companion.mjs
tests/: test_api_parsing.py  test_brand_assets.py  test_codex_parsing.py  test_codex_snapshot.py  test_config_defaults.py  test_config_flow_validation.py  test_diagnostics.py
